--- a/_posts/2023-12-03-01-gist-index.md
+++ b/_posts/2023-12-03-01-gist-index.md
@@ -34,7 +34,7 @@ postgresql는 16버전 기준으로  B-Tree, Hash, GIST, SP-GIST, GIN, BRIN inde
 또한 geopoint를 지원하는 두 index **GIST** 과 **SP-GIST** 는 다음과 같은 차이점이 있는데요,
 **GIST** 와 다른 점으로 **SP-GIST**는 spatial partitioning이 되는 quadtree, k-dimensional trees와 같은 자료구조들로 구성되어 있습니다. 대표적으로 quadtree는 area를 non-overlapping subdomain으로 나누고 unbalanced한 특성이 있습니다. unbalanced 하기 때문에 uniform하지 않은 데이터 분포를 가지고 있다면 탐색시 많은 internal node 탐색으로 인해 안정적이지 않은 조회 성능이 나올수 있습니다.
 
-**보유중인 station 데이터 특성상 uniform하지 않은 분포를 가지고 있기 때문에 geospatial data의 안정적 조회 성능 개선을 위해 GIST를 사용하였습니다.**
+보유중인 **station 데이터 특성상 uniform하지 않은 분포를 가지고 있기 때문에 geospatial data의 안정적 조회 성능 개선을 위해 GIST를 사용하였습니다.**
 
 ## GIST index 동작
 
