--- a/_posts/2023-12-03-01-gist-index.md
+++ b/_posts/2023-12-03-01-gist-index.md
@@ -24,15 +24,15 @@ last_modified_at: 2023-12-03T:12:30+09:00
 
 ## GIST INDEX
 
-postgresql는 16버전 기준으로  B-Tree, Hash, GIST, SP-GIST, GIN, BRIN index들을 지원하고 있고,
+postgresql는 현재 B-Tree, Hash, GIST, SP-GIST, GIN, BRIN index들을 지원하고 있고,
 이중 spatial data index로 자주 활용되는 index는 GIST과 SP-GIST가 있습니다.
 
 **GIST**는 **b-tree**와 유사하게 balanced search tree 구조를 가지고 있지만, **b-tree**는 one-dimensional data 간의 comparison operator(greater, smaller, same)을 지원하는 반면 GIST는 더 다양한 데이터 타입에 대한 operator들을 지원하고 있습니다.(ex : geodata, image, text document)
 
-**GIST**는 position data type의 operator를 지원하기 위해 **r-tree**를 사용하고 있고, one-dimensional comparison이 아닌 geopoint data의 search를 위한 operator들이 별도로 정의되어 있습니다.  leaf node에는 geopoint data 들이 저장되어 있고 internal node에는 각 operator별 boolean 형태의 predicate이 저장되어 있습니다. 그래서 search시 internal node들에 대해서 search predicate을 검사하고 child node들을 탐색할지 결정을 합니다. (<<해당 point가 box안에 들어가 있는가>> 등등)
+또한 **GIST**의 내부 자료구조로 position data type의 operator를 지원하기 위해 **r-tree**를 사용하고 있고, one-dimensional comparison이 아닌 geopoint data의 search를 위한 operator들이 별도로 정의되어 있습니다.  leaf node에는 geopoint data 들이 저장되어 있고 internal node에는 각 operator별 boolean 형태의 predicate이 저장되어 있습니다(<<해당 point가 box안에 들어가 있는가>> 등등). 이를 이용하여 search시 internal node들에 대해서 search predicate을 검사하고 child node들을 탐색할지 결정을 합니다.
 
 또한 geopoint를 지원하는 두 index **GIST** 과 **SP-GIST** 는 다음과 같은 차이점이 있는데요,
-**GIST** 와 다른 점으로 **SP-GIST**는 spatial partitioning이 되는 quadtree, k-dimensional trees와 같은 자료구조들로 구성되어 있습니다. 대표적으로 quadtree는 area를 non-overlapping subdomain으로 나누고 unbalanced한 특성이 있습니다. unbalanced 하기 때문에 uniform하지 않은 데이터 분포를 가지고 있다면 탐색시 많은 internal node 탐색으로 인해 안정적이지 않은 조회 성능이 나올수 있습니다.
+**SP-GIST**는 spatial partitioning이 되는 quadtree, k-dimensional trees와 같은 자료구조들로 구성되어 있습니다. 대표적으로 quadtree는 area를 non-overlapping subdomain으로 나누고 unbalanced한 특성이 있습니다. unbalanced 하기 때문에 uniform하지 않은 데이터 분포를 가지고 있다면 탐색시 많은 internal node 탐색으로 인해 안정적이지 않은 조회 성능이 나올수 있습니다. 반면에 **GIST** 자료구조인 **r-tree** 는 balanced 되어 있기에 안정적인 조회 성능 개선을 기대할수 있습니다.
 
 보유중인 **station 데이터 특성상 uniform하지 않은 분포를 가지고 있기 때문에 geospatial data의 안정적 조회 성능 개선을 위해 GIST를 사용하였습니다.**
 
